<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/StudentDetails"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/StudentName"
        android:minHeight="48dp"
        android:id="@+id/studentName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rollNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:text="@string/RollNumber"
        android:autofillHints="" />

    <Switch
        android:id="@+id/switchStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:showText="true"
        android:text="@string/IsEnrolled"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRollNumber" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="editStudentDetails"
        android:text="@string/Update" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteContact"
        android:text="@string/Delete" />


</LinearLayout>